--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -66,8 +66,8 @@ jobs:
 
       - name: Publish ${{ env.NPM_VERSION }}
         run: |
-          echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' >> ./.npmrc
+          echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> ./.npmrc
           npm publish --tag ${{ env.NPM_TAG }}
           git checkout -- .npmrc
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
